force-app/main/default/objects/Amplemarket_Mapping__c/Amplemarket_Mapping__c.object-meta.xml
<CustomObject>
    <description>Per-org configuration of how Amplemarket response fields map onto Lead/Contact/Account records.</description>
    <label>Amplemarket Mapping</label>
    <nameField>
        <displayFormat>AM-{0000000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amplemarket Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>