force-app/main/default/objects/Amplemarket_Mapping__c/fields/Amplemarket_Field__c.field-meta.xml
<CustomField>
    <fullName>Amplemarket_Field__c</fullName>
    <label>Amplemarket Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>JSON dot-path on the Amplemarket response (e.g. "title", "company.industry", "location_details.country") or a match-input key (e.g. "email", "linkedin_url").</description>
</CustomField>