force-app/main/default/objects/Amplemarket_Mapping__c/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match Input</fullName>
            </value>
            <value>
                <fullName>Output Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>