force-app/main/default/objects/Amplemarket_Mapping__c/fields/Reveal_Email__c.field-meta.xml
<CustomField>
    <fullName>Reveal_Email__c</fullName>
    <label>Reveal Email</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>Set on the Match Input row keyed "email" to toggle reveal_email=true on /people/find. Consumes 1 email credit per call when an email is revealed.</description>
</CustomField>