force-app/main/default/objects/Amplemarket_Mapping__c/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <label>Salesforce Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>API name of the field on the target SObject (e.g. "Title", "AnnualRevenue").</description>
</CustomField>