force-app/main/default/objects/Amplemarket_Mapping__c/fields/Update_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Update_Behavior__c</fullName>
    <label>Update Behavior</label>
    <description>Output Field rows only. Always = overwrite the SF field every run. Only if Empty = leave existing non-blank values untouched.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>Only if Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>